--- a/src/app/appel/liste-presence/liste-presence.component.html
+++ b/src/app/appel/liste-presence/liste-presence.component.html
@@ -51,7 +51,7 @@
                                     [disabled]="appelParams.typeEntrainement!='TESTP1' || appelParams.typeEntrainement==null"
                                     [options]="categories" name="categorie" [(ngModel)]="appelParams.categorie"
                                     placeholder="Categorie" [filter]="true" [showClear]="true" optionLabel="designation"
-                                    filterPlaceholder="Search By designation" [showClear]="true">
+                                    filterPlaceholder="Recherche..." [showClear]="true">
                                     <ng-template pTemplate="selectedItem">
                                         <div class="country-item country-item-value" *ngIf="appelParams.categorie">
                                             <div> {{appelParams.categorie.designation}}</div>
@@ -105,13 +105,13 @@
                             selectionMode="single" [globalFilterFields]="['nomJoueur']">
                             <ng-template pTemplate="caption">
                                 <div class="p-d-flex">
-                                    <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash"
+                                    <button pButton label="Nettoyer" class="p-button-outlined" icon="pi pi-filter-slash"
                                         (click)="clear(dt)"></button>
                                     <span class="p-input-icon-left p-ml-auto">
                                         <i class="pi pi-search"></i>
                                         <input style="width: 100%;" pInputText type="text"
                                             (input)="dt.filterGlobal($event.target.value, 'contains')"
-                                            placeholder="Search ..." />
+                                            placeholder="Recherche..." />
                                     </span>
                                 </div>
                             </ng-template>
