--- a/src/app/categorie/add-categorie/add-categorie.component.html
+++ b/src/app/categorie/add-categorie/add-categorie.component.html
@@ -35,7 +35,7 @@
                                 <div class="col-md-6">
                                     <p-dropdown [options]="saisons" [(ngModel)]="categorie.saison" name="saison"
                                         [filter]="true" [showClear]="true" optionLabel="designation"
-                                        placeholder="Select a saison" filterPlaceholder="Search..."
+                                        placeholder="Select a saison" filterPlaceholder="Recherche..."
                                         filterBy="designation">
 
                                         <ng-template pTemplate="selectedItem">
