--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -2,7 +2,7 @@
     <div class="sidebar" data-color="danger" data-background-color="white">
         <!-- data-image="./assets/images/logoST.png" -->
         <app-sidebar></app-sidebar>
-        <!-- <div class="sidebar-background" style="background-image: url(./assets/img/logoST.png)"></div> -->
+        <div class="sidebar-background" style="background-image: url(./assets/images/sidebar.png)"></div>
     </div>
     <div class="main-panel">
         <app-navbar></app-navbar>
