--- a/src/app/validation-joueur/update-joueur-academie-validation/update-joueur-academie-validation.component.html
+++ b/src/app/validation-joueur/update-joueur-academie-validation/update-joueur-academie-validation.component.html
@@ -98,7 +98,7 @@
                                 <div class="col-md-5" style="margin-top: 1%;">
                                     <p-dropdown [options]="itemsParents" [(ngModel)]="joueurAcademie.parent"
                                         name="parent" [filter]="true" [showClear]="true" optionLabel="mobile"
-                                        placeholder="Select a Parent" filterPlaceholder="Search..."
+                                        placeholder="Select a Parent" filterPlaceholder="Recherche..."
                                         filterBy="mobile,nomParent">
 
                                         <ng-template pTemplate="selectedItem">
