--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,60 +1,23 @@
 <div class="logo">
-    <a routerLink="/acceuil" class="simple-text" style="margin-bottom: 1%;">
+    <a routerLink="/acceuil" class="simple-text">
         <div class="logo-img">
             <img style="width: 250; height: 250;" src="assets/images/logoST.png" />
         </div>
         <div style="margin-left: 15%; margin-top: 3%;">Stade Tunisien</div>
     </a>
 </div>
+<div class="logo-menu">
+    <div style="width: 86%;margin-left: 7%;">
+        <input type="text" value="" (input)="filterRoutes($event)" class="form-control" placeholder="Recherche...">
+    </div>
+</div>
 <div class="sidebar-wrapper">
-    <!-- <div *ngIf="isMobileMenu()">
-    <form class="navbar-form">
-      <span class="bmd-form-group">
-        <div class="input-group no-border">
-          <input type="text" value="" class="form-control" placeholder="Search...">
-          <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
-            <i class="material-icons">search</i>
-            <div class="ripple-container"></div>
-          </button>
-        </div>
-      </span>
-    </form>
-    <ul class="nav navbar-nav nav-mobile-menu">
-        <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
-                <i class="material-icons">dashboard</i>
-                <p>
-                    <span class="d-lg-none d-md-block">Stats</span>
-                </p>
-            </a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="material-icons">notifications</i>
-                <span class="notification">5</span>
-                <p>
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                </p>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                <a class="dropdown-item" href="#">Another Notification</a>
-                <a class="dropdown-item" href="#">Another One</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
-                <i class="material-icons">person</i>
-                <p>
-                    <span class="d-lg-none d-md-block">Account</span>
-                </p>
-            </a>
-        </li>
-    </ul>
-  </div> -->
     <ul class="nav">
+        <!-- <li style="width: 90%;margin-left: 5%;margin-top: -15px;" class="nav-item">
+            <div class="nav-link">
+                <input type="text" value="" (input)="filterRoutes($event)" class="form-control" placeholder="Menu...">
+            </div>
+        </li> -->
         <li *ngIf="isMobileMenu()" class="nav-item dropdown">
             <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
@@ -70,7 +33,7 @@
                     <i class="fa fa-fw fa-power-off" style="margin-right: 10%;"></i>Logout</a>
             </div>
         </li>
-        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
+        <li routerLinkActive="active" *ngFor="let menuItem of visibleMenuItems" class="{{menuItem.class}} nav-item">
             <a class="nav-link" [routerLink]="[menuItem.path]">
                 <i class="material-icons">{{menuItem.icon}}</i>
                 <p>{{menuItem.title}}</p>
