--- a/src/app/inscription-test/inscription-test.component.html
+++ b/src/app/inscription-test/inscription-test.component.html
@@ -19,7 +19,6 @@
                     <br>
                     <p-toolbar>
                         <ng-template pTemplate="left">
-                            <button pButton pRipple label="Export" icon="pi pi-download" class="p-button-help"></button>
                         </ng-template>
                     </p-toolbar>
 
@@ -32,13 +31,13 @@
                             [globalFilterFields]="['identifiant','sessionTest.libelle','categorie.designation','nomInscri', 'code', 'mobile']">
                             <ng-template pTemplate="caption">
                                 <div class="p-d-flex">
-                                    <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash"
+                                    <button pButton label="Nettoyer" class="p-button-outlined" icon="pi pi-filter-slash"
                                         (click)="clear(dt)"></button>
                                     <span class="p-input-icon-left p-ml-auto">
                                         <i class="pi pi-search"></i>
                                         <input style="width: 100%;" pInputText type="text"
                                             (input)="dt.filterGlobal($event.target.value, 'contains')"
-                                            placeholder="Search ..." />
+                                            placeholder="Recherche..." />
                                     </span>
                                 </div>
                             </ng-template>
