--- a/src/app/joueur-academie/add-joueur-academie/add-joueur-academie.component.html
+++ b/src/app/joueur-academie/add-joueur-academie/add-joueur-academie.component.html
@@ -72,7 +72,7 @@
                                 <div class="col-md-6" style="margin-top: 1%;">
                                     <p-dropdown [options]="itemsParents" [(ngModel)]="joueurAcamedie.parent"
                                         name="parent" [filter]="true" [showClear]="true" optionLabel="mobile"
-                                        placeholder="Select a Parent" filterPlaceholder="Search..."
+                                        placeholder="Select a Parent" filterPlaceholder="Recherche..."
                                         filterBy="mobile,nomParent">
                                         <ng-template pTemplate="selectedItem">
                                             <div class="country-item country-item-value" *ngIf="joueurAcamedie.parent">
