--- a/src/app/joueur-academie/dataviewj-academie/dataviewj-academie.component.html
+++ b/src/app/joueur-academie/dataviewj-academie/dataviewj-academie.component.html
@@ -6,7 +6,7 @@
                 (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown> -->
             <span class="p-input-icon-left p-mb-2 p-mb-md-0">
                 <i class="pi pi-search"></i>
-                <input type="search" pInputText placeholder="Search..." (input)="dv.filter($event.target.value)">
+                <input type="search" pInputText placeholder="Recherche..." (input)="dv.filter($event.target.value)">
             </span>
             <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
         </div>
