--- a/src/app/joueur-academie/update-joueur-academie/update-joueur-academie.component.html
+++ b/src/app/joueur-academie/update-joueur-academie/update-joueur-academie.component.html
@@ -114,7 +114,7 @@
                                 <div class="col-md-9" style="margin-top: 1%;">
                                     <p-dropdown [options]="itemsParents" [(ngModel)]="joueurAcademie.parent"
                                         name="parent" [filter]="true" [showClear]="true" optionLabel="mobile"
-                                        placeholder="Select a Parent" filterPlaceholder="Search..."
+                                        placeholder="Select a Parent" filterPlaceholder="Recherche..."
                                         filterBy="mobile,nomParent">
 
                                         <ng-template pTemplate="selectedItem">
