--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,10 +2,7 @@
   <div class="row justify-content-md-center">
     <div class="col-md-4">
       <br><br><br>
-      <img src="./assets/images/logoST.png"
-        style="width: 25%; display: block; margin-left: auto; margin-right: auto;">
-      <!-- <br><br>
-      <h1 class="h2" style="text-align: center;">STADE TUNISIEN</h1> -->
+      <img src="./assets/images/logoST.png" style="width: 25%; display: block; margin-left: auto; margin-right: auto;">
       <br>
       <form #f="ngForm" (ngSubmit)="onLogin(f.value, template)">
         <div class="form-content">
